--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Sora:wght@300;400;500;600&family=Source+Sans+Pro:wght@300;400&display=swap" rel="stylesheet"> 
+    
+    <script src="svg-inject.min.js"></script>
+
+    <title>Tulum Tips</title>
 </head>
 <body>
 
@@ -12,12 +18,11 @@
 
     <header>
         <nav>
-            <img src="" alt="">
-            <button></button>
+            <img src="./svg/logo-tulum-tips.svg" onload="SVGInject(this)" />
+            <button></button> 
         </nav>
     </header>
 
-    <!-- =========== HEADER =========== -->
     
 </body>
 </html>
