--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="stylesheet" href="css/style.css">
+
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Sora:wght@300;400;500;600&family=Source+Sans+Pro:wght@300;400&display=swap" rel="stylesheet"> 
     
-    <script src="svg-inject.min.js"></script>
+    <script src="js/svg-inject.min.js"></script>
 
     <title>Tulum Tips</title>
 </head>
@@ -16,13 +18,26 @@
 
     <!-- =========== HEADER =========== -->
 
-    <header>
-        <nav>
-            <img src="./svg/logo-tulum-tips.svg" onload="SVGInject(this)" />
-            <button></button> 
+    <header class="">
+        <nav class="navbar-desktop border">
+            <div>
+                <a href="#">
+                    <img src="./svg/logo-tulum-tips.svg" onload="SVGInject(this)">
+                </a>
+            </div>
+            <a href="#" class="btn">QUERO FAZER PARTE</a>
         </nav>
     </header>
 
+    <!-- =========== HERO =========== -->
+
+    <section class="">
+        <div>
+            <h5>LUCRO</h5>
+            <H1>1.000.000,00</H1>
+        </div>
+        <div></div>
+    </section>
     
 </body>
 </html>
