I started hero section

--- a/index.html
+++ b/index.html
@@ -36,7 +36,20 @@
             <h5>LUCRO</h5>
             <H1>1.000.000,00</H1>
         </div>
-        <div></div>
+        <div>
+            <div>
+                <p>100</p>
+                <img src="" alt="">
+            </div>
+            <div>
+                <p>100</p>
+                <img src="" alt="">
+            </div>
+        </div>
+        <p>Ganhos extraordinários a um clique.</p>
+        <a href="#" class="btn">
+            SAIBA MAIS
+        </a>
     </section>
     
 </body>
