--- a/index.html
+++ b/index.html
@@ -25,31 +25,35 @@
                     <img src="./svg/logo-tulum-tips.svg" onload="SVGInject(this)">
                 </a>
             </div>
-            <a href="#" class="btn">QUERO FAZER PARTE</a>
+            <a href="#" class="btn mobile-none">QUERO FAZER PARTE</a>
         </nav>
     </header>
 
     <!-- =========== HERO =========== -->
 
-    <section class="">
+    <section class="border hero container flex-start flex-column">
         <div>
             <h5>LUCRO</h5>
             <H1>1.000.000,00</H1>
         </div>
-        <div>
-            <div>
-                <p>100</p>
-                <img src="" alt="">
+        <div class="my-2 flex-center">
+            <div class="hero__bet-score flex-center">
+                <h4 class="mr-1">100</h4>
+                <img src="./svg/icon-bet-green.svg" onload="SVGInject(this)">
             </div>
-            <div>
-                <p>100</p>
-                <img src="" alt="">
+            <div class="hero__bet-score flex-center ml-3">
+                <h4 class="mr-1">27</h4>
+                <img src="./svg/icon-bet-red.svg" onload="SVGInject(this)">
             </div>
         </div>
-        <p>Ganhos extraordinários a um clique.</p>
+        <p class="body-1 my-2">Ganhos extraordinários a um clique.</p>
         <a href="#" class="btn">
             SAIBA MAIS
         </a>
+        <div>
+            <img class="mb-2" src="./svg/line.svg" onload="SVGInject(this)">
+            <img class="hero__trophy" src="./img/trophy.png">
+        </div>
     </section>
     
 </body>
