--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- =========== HEADER =========== -->
 
     <header class="">
-        <nav class="navbar-desktop border">
+        <nav class="navbar-desktop">
             <div>
                 <a href="#">
                     <img src="./svg/logo-tulum-tips.svg" onload="SVGInject(this)">
@@ -31,7 +31,14 @@
 
     <!-- =========== HERO =========== -->
 
-    <section class="border hero container flex-start flex-column">
+    <section class=" hero container flex-start flex-column relative">
+        <div class="hero__bg-money">
+            <img class="money-1" src="./svg/money-g-1.svg" onload="SVGInject(this)">
+            <img class="money-2" src="./svg/money-g-2.svg" onload="SVGInject(this)">
+            <img class="money-3" src="./svg/money-g-3.svg" onload="SVGInject(this)">
+            <img class="money-4" src="./svg/money-g-4.svg" onload="SVGInject(this)">
+            <img class="money-5" src="./svg/money-g-5.svg" onload="SVGInject(this)">
+        </div>
         <div>
             <h5>LUCRO</h5>
             <H1>1.000.000,00</H1>
