--- a/index.html
+++ b/index.html
@@ -33,11 +33,21 @@
 
     <section class=" hero container flex-start flex-column relative">
         <div class="hero__bg-money">
-            <img class="money-1" src="./svg/money-g-1.svg" onload="SVGInject(this)">
-            <img class="money-2" src="./svg/money-g-2.svg" onload="SVGInject(this)">
-            <img class="money-3" src="./svg/money-g-3.svg" onload="SVGInject(this)">
-            <img class="money-4" src="./svg/money-g-4.svg" onload="SVGInject(this)">
-            <img class="money-5" src="./svg/money-g-5.svg" onload="SVGInject(this)">
+            <img src="./svg/money-1.svg" onload="SVGInject(this)">
+            <img src="./svg/money-2.svg" onload="SVGInject(this)">
+            <img src="./svg/money-3.svg" onload="SVGInject(this)">
+            <img src="./svg/money-4.svg" onload="SVGInject(this)">
+            <img src="./svg/money-5.svg" onload="SVGInject(this)">
+            <img src="./svg/money-6.svg" onload="SVGInject(this)">
+            <img src="./svg/money-7.svg" onload="SVGInject(this)">
+            <img src="./svg/money-8.svg" onload="SVGInject(this)">
+            <img src="./svg/money-9.svg" onload="SVGInject(this)">
+            <img src="./svg/money-10.svg" onload="SVGInject(this)">
+            <img src="./svg/money-11.svg" onload="SVGInject(this)">
+            <img src="./svg/money-12.svg" onload="SVGInject(this)">
+            <img src="./svg/money-13.svg" onload="SVGInject(this)">
+            <img src="./svg/money-14.svg" onload="SVGInject(this)">
+            <img src="./svg/money-15.svg" onload="SVGInject(this)">
         </div>
         <div>
             <h5>LUCRO</h5>
