--- a/index.html
+++ b/index.html
@@ -33,21 +33,21 @@
 
     <section class=" hero container flex-start flex-column relative">
         <div class="hero__bg-money">
-            <img src="./svg/money-1.svg" onload="SVGInject(this)">
-            <img src="./svg/money-2.svg" onload="SVGInject(this)">
-            <img src="./svg/money-3.svg" onload="SVGInject(this)">
-            <img src="./svg/money-4.svg" onload="SVGInject(this)">
-            <img src="./svg/money-5.svg" onload="SVGInject(this)">
-            <img src="./svg/money-6.svg" onload="SVGInject(this)">
-            <img src="./svg/money-7.svg" onload="SVGInject(this)">
-            <img src="./svg/money-8.svg" onload="SVGInject(this)">
-            <img src="./svg/money-9.svg" onload="SVGInject(this)">
-            <img src="./svg/money-10.svg" onload="SVGInject(this)">
-            <img src="./svg/money-11.svg" onload="SVGInject(this)">
-            <img src="./svg/money-12.svg" onload="SVGInject(this)">
-            <img src="./svg/money-13.svg" onload="SVGInject(this)">
-            <img src="./svg/money-14.svg" onload="SVGInject(this)">
-            <img src="./svg/money-15.svg" onload="SVGInject(this)">
+            <img class="money-1" src="./svg/money-1.svg" onload="SVGInject(this)">
+            <img class="money-2" src="./svg/money-2.svg" onload="SVGInject(this)">
+            <img class="money-3" src="./svg/money-3.svg" onload="SVGInject(this)">
+            <img class="money-4" src="./svg/money-4.svg" onload="SVGInject(this)">
+            <img class="money-5" src="./svg/money-5.svg" onload="SVGInject(this)">
+            <img class="money-6" src="./svg/money-6.svg" onload="SVGInject(this)">
+            <img class="money-7" src="./svg/money-7.svg" onload="SVGInject(this)">
+            <img class="money-8" src="./svg/money-8.svg" onload="SVGInject(this)">
+            <img class="money-9" src="./svg/money-9.svg" onload="SVGInject(this)">
+            <img class="money-10" src="./svg/money-10.svg" onload="SVGInject(this)">
+            <img class="money-11" src="./svg/money-11.svg" onload="SVGInject(this)">
+            <img class="money-12" src="./svg/money-12.svg" onload="SVGInject(this)">
+            <img class="money-13" src="./svg/money-13.svg" onload="SVGInject(this)">
+            <img class="money-14" src="./svg/money-14.svg" onload="SVGInject(this)">
+            <img class="money-15" src="./svg/money-15.svg" onload="SVGInject(this)">
         </div>
         <div>
             <h5>LUCRO</h5>
