--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 </head>
 <body>
 
+    <!-- ============================== -->
     <!-- =========== HEADER =========== -->
+    <!-- ============================== -->
 
     <header class="">
         <nav class="navbar-desktop">
@@ -29,9 +31,11 @@
         </nav>
     </header>
 
-    <!-- =========== HERO =========== -->
+    <!-- ============================== -->
+    <!-- ============ HERO ============ -->
+    <!-- ============================== -->
 
-    <section class=" hero container flex-start flex-column relative">
+    <section class="border hero container flex-start flex-column relative">
         <div class="hero__bg-money">
             <img class="money-1" src="./svg/money-1.svg" onload="SVGInject(this)">
             <img class="money-2" src="./svg/money-2.svg" onload="SVGInject(this)">
@@ -71,6 +75,15 @@
             <img class="mb-2" src="./svg/line.svg" onload="SVGInject(this)">
             <img class="hero__trophy" src="./img/trophy.png">
         </div>
+    </section>
+    
+
+    <!-- ============================== -->
+    <!-- =========== RESULT =========== -->
+    <!-- ============================== -->
+
+    <section class="border container">
+
     </section>
     
 </body>
