--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- ============ HERO ============ -->
     <!-- ============================== -->
 
-    <section class="border hero container flex-start flex-column relative">
+    <section class=" hero container flex-start flex-column relative">
         <div class="hero__bg-money">
             <img class="money-1" src="./svg/money-1.svg" onload="SVGInject(this)">
             <img class="money-2" src="./svg/money-2.svg" onload="SVGInject(this)">
@@ -82,7 +82,15 @@
     <!-- =========== RESULT =========== -->
     <!-- ============================== -->
 
-    <section class="border container">
+    <section class=" result container flex-start flex-column">
+
+        <div>
+            <h5>RESULTADOS</h5>
+            <h3>Ganhe dinheiro com nossa
+                <br>
+                estratégia campeã
+            </h3>
+        </div>
 
     </section>
     
