--- a/index.html
+++ b/index.html
@@ -90,7 +90,12 @@
                 <br>
                 estratégia campeã
             </h3>
+            <p class="mt-2">Nossa estratégia já foi validada por milhares de pessoas</p>
         </div>
+
+        <a href="#" class="link mt-2">
+            Saiba mais
+        </a>
 
     </section>
     
