--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		<!-- ============ HERO ============ -->
 		<!-- ============================== -->
 
-		<section class="hero container flex-start flex-column relative">
+		<main class="hero container flex-start flex-column relative">
 			<div class="hero__bg-money">
 				<img class="money-1" src="./svg/money-1.svg" onload="SVGInject(this)" />
 				<img class="money-2" src="./svg/money-2.svg" onload="SVGInject(this)" />
@@ -99,7 +99,7 @@
 				<img class="mb-2" src="./svg/line.svg" onload="SVGInject(this)" />
 				<img class="hero__trophy" src="./img/trophy.png" />
 			</div>
-		</section>
+		</main>
 
 		<!-- ============================== -->
 		<!-- =========== RESULT =========== -->
@@ -120,22 +120,95 @@
 
 			<a href="#" class="link mt-2"> Saiba mais </a>
 
-			<img class="mt-3" src="./svg/cell.svg" onload="SVGInject(this)" />
+			<img class="mt-3" src="./img/cell.png" />
 		</section>
 
 		<!-- ============================== -->
 		<!-- ========== THE BEST ========== -->
 		<!-- ============================== -->
 
-		<section class="border best container">
-			<div class="best__card">
-				<div>
-					<h5>O MELHOR</h5>
-					<h3>
-						Por que<br />
-						TULUM<span>TIPS</span>?
-					</h3>
+		<section class="best container">
+			<div class="best__bg-card flex-center relative">
+				<img class="ball-1" src="./svg/ball.svg" onload="SVGInject(this)" />
+				<img class="ball-2" src="./svg/ball.svg" onload="SVGInject(this)" />
+				<img class="ball-3" src="./svg/ball.svg" onload="SVGInject(this)" />
+
+				<img
+					class="best__icon-arrow"
+					src="./svg/arrow-down.svg"
+					onload="SVGInject(this)"
+				/>
+
+				<div class="best__card flex-center">
+					<div>
+						<h5>O MELHOR</h5>
+						<h3>
+							Por que<br />
+							TULUM<span>TIPS</span>?
+						</h3>
+					</div>
+					<div class="best__reason flex-center">
+						<div class="flex-center flex-column gap-3">
+							<img src="./svg/icon-safe.svg" onload="SVGInject(this)" />
+
+							<p>SEGURO</p>
+						</div>
+						<div class="flex-center flex-column gap-3">
+							<img src="./svg/icon-earn.svg" onload="SVGInject(this)" />
+
+							<p>LUCRATIVO</p>
+						</div>
+						<div class="flex-center flex-column gap-3">
+							<img src="./svg/icon-msg.svg" onload="SVGInject(this)" />
+
+							<p>TIPS FREQUENTES</p>
+						</div>
+						<div class="flex-center flex-column gap-3">
+							<img src="./svg/icon-like.svg" onload="SVGInject(this)" />
+
+							<p>+1.000 CLIENTES</p>
+						</div>
+					</div>
 				</div>
+			</div>
+		</section>
+
+		<!-- ============================== -->
+		<!-- =========== REASON =========== -->
+		<!-- ============================== -->
+
+		<section class="reason container">
+			<div class="relative">
+				<!-- Image -->
+				<img class="reason_cell" src="./img/cell-tulum.png"/>
+				<img class="icon-earn" src="./svg/icon-earn.svg" onload="SVGInject(this)" />
+				<img class="icon-safe" src="./svg/icon-safe.svg" onload="SVGInject(this)" />
+				<img src="./svg/line.svg" onload="SVGInject(this)" />
+			</div>
+			<div class="pt-5">
+				<div>
+					<h5>PRA VOCÊ!</h5>
+					<h3>Pra quem é a TULUM<span>TIPS</span>?</h3>
+				</div>
+				<div class="reason__list gap-3">
+					<div class="flex-start mt-6">
+						<img src="./svg/icon-bet-green.svg" onload="SVGInject(this)" />
+						<p class="pl-2">Pra você que está cansado de perder dinheiro</p>
+					</div>
+					<div class="flex-start">
+						<img src="./svg/icon-bet-green.svg" onload="SVGInject(this)" />
+						<p class="pl-2">Já tentou de tudo e nada da certo</p>
+					</div>
+					<div class="flex-start">
+						<img src="./svg/icon-bet-green.svg" onload="SVGInject(this)" />
+						<p class="pl-2">Não aguenta mais ficar só com promessas</p>
+					</div>
+					<div class="flex-start">
+						<img src="./svg/icon-bet-green.svg" onload="SVGInject(this)" />
+						<p class="pl-2">Quer realizar sonhos</p>
+					</div>
+				</div>
+				<a href="#" class="link mt-2">Quero fazer parte</a>
 			</div>
 		</section>
 	</body>
