--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
 		<link rel="stylesheet" href="css/style.css" />
 
+		<script src="./js/app.js"></script>
+
 		<link rel="preconnect" href="https://fonts.gstatic.com" />
 		<link
 			href="https://fonts.googleapis.com/css2?family=Sora:wght@300;400;500;600&family=Source+Sans+Pro:wght@300;400&display=swap"
