--- a/index.html
+++ b/index.html
@@ -7,15 +7,22 @@
 
 		<link rel="stylesheet" href="css/style.css" />
 
-		<script src="./js/app.js"></script>
-
 		<link rel="preconnect" href="https://fonts.gstatic.com" />
 		<link
 			href="https://fonts.googleapis.com/css2?family=Sora:wght@300;400;500;600&family=Source+Sans+Pro:wght@300;400&display=swap"
 			rel="stylesheet"
 		/>
 
-		<script src="js/svg-inject.min.js"></script>
+		<link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
+		/>
+
+		<script defer src="./js/app.js"></script>
+
+		<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+		
+		<script defer src="js/svg-inject.min.js"></script>
 
 		<title>Tulum Tips</title>
 	</head>
@@ -24,7 +31,7 @@
 		<!-- =========== HEADER =========== -->
 		<!-- ============================== -->
 
-		<header class="">
+		<header>
 			<nav class="navbar-desktop">
 				<div>
 					<a href="#">
@@ -182,12 +189,20 @@
 		<section class="reason container">
 			<div class="relative">
 				<!-- Image -->
-				<img class="reason_cell" src="./img/cell-tulum.png"/>
-				<img class="icon-earn" src="./svg/icon-earn.svg" onload="SVGInject(this)" />
-				<img class="icon-safe" src="./svg/icon-safe.svg" onload="SVGInject(this)" />
+				<img class="reason_cell" src="./img/cell-tulum.png" />
+				<img
+					class="icon-earn"
+					src="./svg/icon-earn.svg"
+					onload="SVGInject(this)"
+				/>
+				<img
+					class="icon-safe"
+					src="./svg/icon-safe.svg"
+					onload="SVGInject(this)"
+				/>
 				<img src="./svg/line.svg" onload="SVGInject(this)" />
 			</div>
-			<div class="pt-5">
+			<div class="pt-4">
 				<div>
 					<h5>PRA VOCÊ!</h5>
 					<h3>Pra quem é a TULUM<span>TIPS</span>?</h3>
@@ -213,5 +228,132 @@
 				<a href="#" class="link mt-2">Quero fazer parte</a>
 			</div>
 		</section>
+
+		<!-- ============================== -->
+		<!-- ========= DEPOSITIONS ======== -->
+		<!-- ============================== -->
+
+		<section class="box">
+			<h5 class="mb-1 mt-2" data-aos="fade-up" data-aos-delay="100">
+				DEPOIMENTOS
+			</h5>
+			<h2 class="mb-1" data-aos="fade-up" data-aos-delay="200">
+				O que falam da Tulum
+			</h2>
+		</section>
+		<section class="container-swiper hidden">
+			<div class="swiper-container">
+				<div class="swiper-wrapper">
+					<div class="swiper-slide">
+						<div class="photo-profile my-1 photo-1"></div>
+						<h4 class="my-1">Jorge Silva</h4>
+						<p class="my-1">
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quis
+							pellentesque vulputate at mattis nibh nulla est. Pharetra, eget
+							purus tortor nibh porta ipsum enim urna viverra.
+						</p>
+					</div>
+					<div class="swiper-slide">
+						<div class="photo-profile my-1 photo-2"></div>
+						<h4 class="my-1">Anna Keller</h4>
+						<p class="my-1">
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quis
+							pellentesque vulputate at mattis nibh nulla est. Pharetra, eget
+							purus tortor nibh porta ipsum enim urna viverra.
+						</p>
+					</div>
+					<div class="swiper-slide">
+						<div class="photo-profile my-1 photo-3"></div>
+						<h4 class="my-1">Gabriela Shuzz</h4>
+						<p class="my-1">
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quis
+							pellentesque vulputate at mattis nibh nulla est. Pharetra, eget
+							purus tortor nibh porta ipsum enim urna viverra.
+						</p>
+					</div>
+					<div class="swiper-slide">
+						<div class="photo-profile my-1 photo-4"></div>
+						<h4 class="my-1">Lia Vieira</h4>
+						<p class="my-1">
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quis
+							pellentesque vulputate at mattis nibh nulla est. Pharetra, eget
+							purus tortor nibh porta ipsum enim urna viverra.
+						</p>
+					</div>
+					<div class="swiper-slide">
+						<div class="photo-profile my-1 photo-5"></div>
+						<h4 class="my-1">Théo Gomes</h4>
+						<p class="my-1">
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quis
+							pellentesque vulputate at mattis nibh nulla est. Pharetra, eget
+							purus tortor nibh porta ipsum enim urna viverra.
+						</p>
+					</div>
+					<div class="swiper-slide">
+						<div class="photo-profile my-1 photo-6"></div>
+						<h4 class="my-1">Marcela Sousa</h4>
+						<p class="my-1">
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quis
+							pellentesque vulputate at mattis nibh nulla est. Pharetra, eget
+							purus tortor nibh porta ipsum enim urna viverra.
+						</p>
+					</div>
+				</div>
+			</div>
+
+			<div class="button-next"></div>
+			<div class="button-prev"></div>
+		</section>
+
+		<!-- ============================== -->
+		<!-- =========== ACTION =========== -->
+		<!-- ============================== -->
+
+		<section class=" action container flex-column">
+
+			<div>
+				<h5>NÃO FIQUE DE FORA</h5>
+				<h3>
+					O que está esperando para lucrar muito?
+				</h3>
+				<p class="mt-2">
+					Muitas pessoas já lucraram com nossas tips. Não fique de fora e realize seus sonhos!
+				</p>
+			</div>
+
+			<a href="#" class="btn mt-6"> Saiba mais </a>
+
+			<img class="mt-7" src="./img/screen-bet.png" alt="">
+
+		</section>
+
+		<!-- ============================== -->
+		<!-- =========== FOOTER =========== -->
+		<!-- ============================== -->
+
+		<footer>
+			<section class="footer container">
+				<div>
+					<a href="#">
+						<img src="./svg/logo-tulum-tips-black.svg" onload="SVGInject(this)" />
+					</a>
+				</div>
+				<div class="flex-center gap-3">
+					<a href="#">
+						<img src="./svg/facebook.svg" onload="SVGInject(this)" />
+					</a>
+					<a href="#">
+						<img src="./svg/youtube.svg" onload="SVGInject(this)" />
+					</a>
+					<a href="#">
+						<img src="./svg/instagram.svg" onload="SVGInject(this)" />
+					</a>
+					<a href="#">
+						<img src="./svg/twitter.svg" onload="SVGInject(this)" />
+					</a>
+				</div>
+			</section>
+		</footer>
+
 	</body>
 </html>
