Desktop ok ok ok

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 		<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 		
-		<script defer src="js/svg-inject.min.js"></script>
+		<script src="js/svg-inject.min.js"></script>
 
 		<title>Tulum Tips</title>
 	</head>
@@ -354,6 +354,24 @@
 				</div>
 			</section>
 		</footer>
+
+		<!-- ============================== -->
+		<!-- =========== CONTRIBUTION =========== -->
+		<!-- ============================== -->	
+
+		<section class="contribution-container">
+
+			<div class="container py-1 contribution">
+				<p>
+					Tulum Tips, <span class="year"></span>. Todos os direitos reservados.
+				</p>
+	
+				<p>
+					Feito por <a class="contribution__link" href="https://wa.me/5581985239337?text=Ol%C3%A1%2C+gostaria+de+um+site." target="_blank">Alex Lemos</a>
+				</p>
+			</div>
+
+		</section>
 
 	</body>
 </html>
