--- a/index.html
+++ b/index.html
@@ -105,8 +105,10 @@
 			<p class="body-1 my-2">Ganhos extraordinários a um clique.</p>
 			<a href="#" class="btn"> SAIBA MAIS </a>
 			<div>
-				<img class="mb-2" src="./svg/line.svg" onload="SVGInject(this)" />
-				<img class="hero__trophy" src="./img/trophy.png" />
+				<img class="mb-2 mobile-none" src="./svg/line.svg" onload="SVGInject(this)" />
+				<img class="mb-2 mobile-ok" src="./svg/line-mobile.svg" onload="SVGInject(this)" />
+				<img class="mobile-none" src="./img/trophy.png" />
+				<img class="mobile-ok" src="./img/trophy-mobile.png" />
 			</div>
 		</main>
 
@@ -129,7 +131,9 @@
 
 			<a href="#" class="link mt-2"> Saiba mais </a>
 
-			<img class="mt-3" src="./img/cell.png" />
+			<img class="mt-3 mobile-none" src="./img/cell.png" />
+			<img class="mt-3 mobile-ok" src="./img/cell-mobile.png" />
+
 		</section>
 
 		<!-- ============================== -->
@@ -138,9 +142,9 @@
 
 		<section class="best container">
 			<div class="best__bg-card flex-center relative">
-				<img class="ball-1" src="./svg/ball.svg" onload="SVGInject(this)" />
-				<img class="ball-2" src="./svg/ball.svg" onload="SVGInject(this)" />
-				<img class="ball-3" src="./svg/ball.svg" onload="SVGInject(this)" />
+				<img class="ball-1 mobile-none" src="./svg/ball.svg" onload="SVGInject(this)" />
+				<img class="ball-2 mobile-none" src="./svg/ball.svg" onload="SVGInject(this)" />
+				<img class="ball-3 mobile-none" src="./svg/ball.svg" onload="SVGInject(this)" />
 
 				<img
 					class="best__icon-arrow"
@@ -189,6 +193,7 @@
 		<section class="reason container">
 			<div class="relative">
 				<!-- Image -->
+				<img class="reason_cell" src="./img/cell-tulum.png" />
 				<img class="reason_cell" src="./img/cell-tulum.png" />
 				<img
 					class="icon-earn"
