--- a/index.html
+++ b/index.html
@@ -193,8 +193,8 @@
 		<section class="reason container">
 			<div class="relative">
 				<!-- Image -->
-				<img class="reason_cell" src="./img/cell-tulum.png" />
-				<img class="reason_cell" src="./img/cell-tulum.png" />
+				<img class=" mobile-none" src="./img/cell-tulum.png" />
+				<img class=" mobile-ok" src="./img/cell-tulum-mobile.png" />
 				<img
 					class="icon-earn"
 					src="./svg/icon-earn.svg"
@@ -205,7 +205,7 @@
 					src="./svg/icon-safe.svg"
 					onload="SVGInject(this)"
 				/>
-				<img src="./svg/line.svg" onload="SVGInject(this)" />
+				<img class="mobile-none" src="./svg/line.svg" onload="SVGInject(this)" />
 			</div>
 			<div class="pt-4">
 				<div>
@@ -250,57 +250,45 @@
 			<div class="swiper-container">
 				<div class="swiper-wrapper">
 					<div class="swiper-slide">
-						<div class="photo-profile my-1 photo-1"></div>
+						<div class="photo-profile my-1 photo"></div>
 						<h4 class="my-1">Jorge Silva</h4>
 						<p class="my-1">
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quis
-							pellentesque vulputate at mattis nibh nulla est. Pharetra, eget
-							purus tortor nibh porta ipsum enim urna viverra.
+							A atenção da equipe é surreal!! E a taxa de acerto nem fala... Indico dms!!! &#9989 &#9989 &#9989
 						</p>
 					</div>
 					<div class="swiper-slide">
-						<div class="photo-profile my-1 photo-2"></div>
+						<div class="photo-profile my-1 photo"></div>
 						<h4 class="my-1">Anna Keller</h4>
 						<p class="my-1">
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quis
-							pellentesque vulputate at mattis nibh nulla est. Pharetra, eget
-							purus tortor nibh porta ipsum enim urna viverra.
+							Dar green com consistência é sem palavras &#129297
 						</p>
 					</div>
 					<div class="swiper-slide">
-						<div class="photo-profile my-1 photo-3"></div>
+						<div class="photo-profile my-1 photo"></div>
 						<h4 class="my-1">Gabriela Shuzz</h4>
 						<p class="my-1">
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quis
-							pellentesque vulputate at mattis nibh nulla est. Pharetra, eget
-							purus tortor nibh porta ipsum enim urna viverra.
+							O melhor feedback seria o print da minha banca com a ajuda de vcs  &#129322 &#129321 &#128184 &#128184 &#128184 cuida!!
 						</p>
 					</div>
 					<div class="swiper-slide">
-						<div class="photo-profile my-1 photo-4"></div>
+						<div class="photo-profile my-1 photo"></div>
 						<h4 class="my-1">Lia Vieira</h4>
 						<p class="my-1">
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quis
-							pellentesque vulputate at mattis nibh nulla est. Pharetra, eget
-							purus tortor nibh porta ipsum enim urna viverra.
+							Vs são sensacionais!! Quem não ta no grupo ou é doido ou burro &#129315 &#129315 &#129315 &#129315 &#129315 &#129315 &#129315.
 						</p>
 					</div>
 					<div class="swiper-slide">
-						<div class="photo-profile my-1 photo-5"></div>
+						<div class="photo-profile my-1 photo"></div>
 						<h4 class="my-1">Théo Gomes</h4>
 						<p class="my-1">
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quis
-							pellentesque vulputate at mattis nibh nulla est. Pharetra, eget
-							purus tortor nibh porta ipsum enim urna viverra.
+							Só sei que minha viagem de férias p Europa foi toda paga com as dicas da Tulum Tips &#129297 &#129322
 						</p>
 					</div>
 					<div class="swiper-slide">
-						<div class="photo-profile my-1 photo-6"></div>
+						<div class="photo-profile my-1 photo"></div>
 						<h4 class="my-1">Marcela Sousa</h4>
 						<p class="my-1">
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quis
-							pellentesque vulputate at mattis nibh nulla est. Pharetra, eget
-							purus tortor nibh porta ipsum enim urna viverra.
+							Só tenho a agradecer!!! Salvou meu aluguel num péssimo momento da minha vida!!!! &#128150
 						</p>
 					</div>
 				</div>
@@ -328,7 +316,8 @@
 
 			<a href="#" class="btn mt-6"> Saiba mais </a>
 
-			<img class="mt-7" src="./img/screen-bet.png" alt="">
+			<img class="mt-7 mobile-none" src="./img/screen-bet.png" alt="">
+			<img class="mt-7 mobile-ok" src="./img/screen-bet-mobile.svg" alt="">
 
 		</section>
 
