--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 						<div class="photo-profile my-1 photo"></div>
 						<h4 class="my-1">Jorge Silva</h4>
 						<p class="my-1">
-							A atenção da equipe é surreal!! E a taxa de acerto nem fala... Indico dms!!! &#9989 &#9989 &#9989
+							A atenção da equipe é surreal!! E a taxa de acerto nem se fala... Indico dms!!! &#9989 &#9989 &#9989
 						</p>
 					</div>
 					<div class="swiper-slide">
@@ -274,7 +274,7 @@
 						<div class="photo-profile my-1 photo"></div>
 						<h4 class="my-1">Lia Vieira</h4>
 						<p class="my-1">
-							Vs são sensacionais!! Quem não ta no grupo ou é doido ou burro &#129315 &#129315 &#129315 &#129315 &#129315 &#129315 &#129315.
+							Vs são sensacionais!! Quem não ta no grupo ou é doido ou é burro &#129315 &#129315 &#129315 &#129315 &#129315 &#129315 &#129315.
 						</p>
 					</div>
 					<div class="swiper-slide">
@@ -314,10 +314,10 @@
 				</p>
 			</div>
 
-			<a href="#" class="btn mt-6"> Saiba mais </a>
+			<a href="#" class="btn mt-6"> QUERO PARTICICPAR </a>
 
 			<img class="mt-7 mobile-none" src="./img/screen-bet.png" alt="">
-			<img class="mt-7 mobile-ok" src="./img/screen-bet-mobile.svg" alt="">
+			<img class="mt-7 mobile-ok" src="./img/screen-bet-mobile.png" alt="">
 
 		</section>
 
