--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 		
 		<script src="js/svg-inject.min.js"></script>
 
-		<title>Tulum Tips</title>
+		<title>Tulum Tips — Consultoria de Apostas Esportivas</title>
+		<meta name="description" content="Somos uma Consultoria de Apostas Esportivas com um alto grau de consistências e administração de banca profissional. Prezamos pelas qualidades das apostas e não entramos para perder.">
 	</head>
 	<body>
 		<!-- ============================== -->
