--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 						<img src="./svg/logo-tulum-tips.svg" onload="SVGInject(this)" />
 					</a>
 				</div>
-				<a href="#" class="btn mobile-none">QUERO FAZER PARTE</a>
+				<a href="https://t.me/tulumtips" class="btn mobile-none">QUERO FAZER PARTE</a>
 			</nav>
 		</header>
 
@@ -106,7 +106,7 @@
 				</div>
 			</div>
 			<p class="body-1 my-2">Ganhos extraordinários a um clique.</p>
-			<a href="#" class="btn"> SAIBA MAIS </a>
+			<a href="https://t.me/tulumtips" class="btn"> SAIBA MAIS </a>
 			<div>
 				<img class="mb-2 mobile-none" src="./svg/line.svg" onload="SVGInject(this)" />
 				<img class="mb-2 mobile-ok" src="./svg/line-mobile.svg" onload="SVGInject(this)" />
@@ -132,7 +132,7 @@
 				</p>
 			</div>
 
-			<a href="#" class="link mt-2"> Saiba mais </a>
+			<a href="https://t.me/tulumtips" class="link mt-2"> Saiba mais </a>
 
 			<img class="mt-3 mobile-none" src="./img/cell.png" />
 			<img class="mt-3 mobile-ok" src="./img/cell-mobile.png" />
@@ -233,7 +233,7 @@
 						<p class="pl-2">Quer realizar sonhos</p>
 					</div>
 				</div>
-				<a href="#" class="link mt-2">Quero fazer parte</a>
+				<a href="https://t.me/tulumtipsconsulting" class="link mt-2">Quero fazer parte</a>
 			</div>
 		</section>
 
@@ -317,7 +317,7 @@
 				</p>
 			</div>
 
-			<a href="#" class="btn mt-6"> QUERO PARTICICPAR </a>
+			<a href="https://t.me/tulumtipsconsulting" class="btn mt-6"> QUERO PARTICICPAR </a>
 
 			<img class="mt-7 mobile-none" src="./img/screen-bet.png" alt="">
 			<img class="mt-7 mobile-ok" src="./img/screen-bet-mobile.png" alt="">
@@ -332,21 +332,15 @@
 			<section class="footer container">
 				<div>
 					<a href="#">
-						<img src="./svg/logo-tulum-tips-black.svg" onload="SVGInject(this)" />
+						<img src="./svg/logo-tulum-tips.svg" onload="SVGInject(this)" />
 					</a>
 				</div>
 				<div class="flex-center gap-3">
-					<a href="#">
-						<img src="./svg/facebook.svg" onload="SVGInject(this)" />
+					<a href="https://t.me/tulumtipsconsulting">
+						<img src="./svg/telegram.svg" onload="SVGInject(this)" />
 					</a>
-					<a href="#">
-						<img src="./svg/youtube.svg" onload="SVGInject(this)" />
-					</a>
-					<a href="#">
+					<a href="https://www.instagram.com/tulum.tips/">
 						<img src="./svg/instagram.svg" onload="SVGInject(this)" />
-					</a>
-					<a href="#">
-						<img src="./svg/twitter.svg" onload="SVGInject(this)" />
 					</a>
 				</div>
 			</section>
